# mbs_rover

./: .gitignore  README.md
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: robot_control.yaml
src/rover_description/launch/: bringup.launch.py
src/rover_description/meshes/rover_platform/visuals/: wheel.stl
src/rover_description/src/: my_node.cpp
src/rover_description/xacro/: argo.urdf  robot.xacro
src/rover_description/xacro/rover_platform/: rover.gazebo-fortress.xacro  rover_platform.xacro
src/rover_gazebo/: CMakeLists.txt  README.md  package.xml
src/rover_gazebo/config/: kill_gz.sh
src/rover_gazebo/launch/: classic_simulation.launch.py  fortress_simulation.launch.py
src/rover_gazebo/worlds/: custom_world.world  fortress-moon.sdf  fortress-plane.sdf  plane.world
src/rover_nav2/: CMakeLists.txt  README.md  package.xml
src/rover_nav2/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/rover_nav2/launch/: gps_navi.launch.py  map_navi.launch.py  odom_navi.launch.py
src/rover_nav2/launch/include/: localization.launch.py  navigation.launch.py  slam.launch.py
src/rover_nav2/maps/: custom_map.pgm  custom_map.yaml  devshop.yaml
src/rover_nav2/param/: localization.yaml  nav2_gps.yaml  nav2_map.yaml  nav2_odom.yaml
src/rover_viz/: CMakeLists.txt  package.xml
src/rover_viz/launch/: view_robot.launch.py
src/rover_viz/rviz/: model.rviz  robot.rviz  steam.rviz
